examples/pos/issue1283b.effekt
def main(): Unit = {
  val boxed2 = if (1 < 2) {
    box { () }
  } else {
    box { println("message") }
  }
}
