examples/neg/name-based-implicits/type-error-call-id.effekt
def foo(?callId: String): String = callId

def main() = {
  val y: String = foo()
  println(y)
}